--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "aos": "^3.0.0-beta.6",
-    "axios": "^0.27.2",
     "emailjs-com": "^3.2.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-recaptcha": "^2.3.10",
     "react-scripts": "5.0.1"
   },
   "scripts": {
