--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-portfolio",
+  "name": "react-simple-portfolio",
   "version": "1.0.1",
   "private": true,
   "dependencies": {
