--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "react-simple-portfolio",
-  "version": "1.0.1",
+  "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "aos": "^3.0.0-beta.6",
+    "aos": "^2.3.4",
     "emailjs-com": "^3.2.0",
     "node-sass": "^7.0.1",
     "react": "^18.2.0",
@@ -14,7 +14,8 @@
     "react-icons": "^4.4.0",
     "react-recaptcha": "^2.3.10",
     "react-scripts": "5.0.1",
-    "react-typed": "^1.2.0"
+    "react-typed": "^1.2.0",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
