changed brand link was pointing to index.html

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "React Simple Portfolio",
+  "name": "Mohamed Hafez React Simple Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
